# maintenance

./: .gitignore  CHANGELOG.md  CLAUDE.md  MAINTENANCE_ESTIMATE.md  Makefile  PHASE1_PROGRESS.md  PHASE1_SUMMARY.md  README.md  REORGANIZATION_FOLLOWUP.md  REORGANIZATION_SUMMARY.md  TICKET_STRUCTURE_REFACTOR.md  analyze_ticket_geocoding.py  apply_geometric_geocoding.py  check_completion.sh  cleanup_outputs.sh  download_txdot_data.py  frequency.py  geocode-routes.py  geocoding_validation_report.csv  geometric_geocoder.py  geometric_results.csv  geometric_results_merged.csv  geometric_summary.json  geometric_summary_merged.json  inspect_roads.py  language.conf  merge_road_networks.py  monitor_pipelines.sh  proximity_results.csv  proximity_results_baseline.csv  proximity_results_before_phase1.csv  proximity_summary.json  proximity_summary_before_phase1.json  purge_stale_cache.py  pyproject.toml  roads_metadata.json  run_pipeline.py  validate_geocoding.py  validation_summary.json
.ai-workspace/: README.md
.ai-workspace/session-2026-02-10/summaries/: FINAL_RESULTS.md  OUTPUT_STRUCTURE_PLAN.md  PIPELINE_RUN_SUMMARY.md
.claude/commands/: breakdown.md  precompact.md  refine.md  review.md  subagent.md  subagents.md
config/: test_config_v2.yaml
config/projects/: floydada_project.yaml  minimal_legacy.yaml  wink_project_full.yaml
counties/andrews/: andrews-geocoded.jsonl  andrews-normalized.jsonl  andrews-validated.jsonl
counties/ward/: ward-geocoded.jsonl  ward-normalized.jsonl  ward-validated.jsonl
counties/winkler/: winkler-geocoded.jsonl  winkler-normalized.jsonl  winkler-validated.jsonl
docs/: CONFIG_BASED_PATHS.md  ESTIMATE_FORMAT_CHANGES.md  EXPORT_QUICK_START.md  FONT_STANDARDIZATION.md  LEAFLET_VIEWER_DESIGN.md  LEAFLET_VIEWER_PROMPT.md  MODULAR_ARCHITECTURE.md  PHASE_2_COMPLETION.md  PIPELINE_STATUS.md  README.md  VERIFICATION_REPORT.md  architecture-maintenance-ticket-pipeline.md  geocoding-improvement-plan.md  road-data-acquisition-guide.md
docs/architecture/: stage-design.md
docs/design/: annualization-design.md  frequency-model.md  quote-sheet-design.md
docs/evolution/: tasks-9-12-completion.md
docs/specifications/: maintenance-estimate-template.md  maintenance-estimate-tests.md
geocoding_pipeline/: README.md  cli.py  config_manager.py  pipeline.py  pyproject.toml
geocoding_pipeline/cache/: cache_manager.py  models.py
geocoding_pipeline/core/: quality_assessment.py  reprocessing_rules.py  validation_rules.py
geocoding_pipeline/outputs/: PIPELINE_SUMMARY.md
geocoding_pipeline/stages/: __init__.py  base_stage.py  stage_1_api.py  stage_3_proximity.py  stage_4_fallback.py  stage_5_validation.py  stage_6_enrichment.py
geocoding_pipeline/tests/: test_cache.py  test_quality.py
geocoding_pipeline/utils/: maintenance_estimate.py  pipeline_proximity.py  ticket_loader.py
projects/floydada/: README.md
projects/floydada/route/: Klaasmeyer - Floydada.kmz
projects/wink/: README.md  Wink_APN_OM_Maintenance_Estimate_Template.xlsx
projects/wink/route/: wink.kmz
prompts/: ticket-analysis-pipeline.md
src/kcci_maintenance/: PERFORMANCE.md  RELEASE_NOTES.md  USAGE.md  cli.py  config_manager.py  example_pipeline_config.yaml  pipeline.py
src/kcci_maintenance/cache/: cache_manager.py  migrations.py  schema.sql
src/kcci_maintenance/core/: reprocessing_rules.py  validation_rules.py
src/kcci_maintenance/export/: __init__.py  geojson_exporter.py  geopackage_exporter.py  heatmap_generator.py  statistics_aggregator.py
src/kcci_maintenance/stages/: __init__.py  stage_2_geometric.py  stage_5_validation.py
src/kcci_maintenance/tests/: test_pipeline.py
src/kcci_maintenance/utils/: jurisdiction_enrichment.py  maintenance_estimate.py  project_paths.py  route_corridor.py  ticket_loader.py
src/scripts/: apply_proximity_geocoding.py  run_pipeline.py
src/starter/: __init__.py  __main__.py  core.py
tests/: test_core.py  test_geocode_query.py  test_proximity_enhancements.py  test_purge_cache.py  test_road_normalize.py
tests/integration/: test_tasks_9_12.py
tests/unit/: test_export_geojson.py  test_export_geopackage.py  test_export_heatmap.py  test_export_statistics.py  test_maintenance_estimate.py
(+164 files in other folders)
